# ins-gnss-sim

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/core/: compensate_coning_sculling.py  earth_model.py  ins_update.py  kalman.py  sins_error_transition.py
src/core/basic/: __init__.py  angle.py  linalg.py  quaternion.py
src/simulation/: __init__.py  av_to_imu.py  imu_adderr.py  misalignment_angle.py  trajectory_generator.py
src/visualization/: __init__.py  plot_utils.py
tests/: test_av_to_imu.py  test_basic.py  test_earth_model.py  test_kalman.py  test_misalignment_angle.py  test_sins_error_transition.py
