[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-inertial-navigation"
version = "0.0.1"
description = "Inertial Navigation System simulation and analysis toolkit"
authors = [{name = "Author", email = "author@example.com"}]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
viz = ["matplotlib>=3.7"]

[tool.setuptools]
packages = {find = {where = ["."], exclude = ["tests", "*.egg-info"]}}


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
python_files = "test_*.py"